--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact">
+          <h2>The Tea Cosy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        </div>
+        <div class="copyright">
+          <span>copyright The tea Cozy 2017</span>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
