Final changes before submitting for evaluation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+    <!-- Flex container for header -->
       <div class="tea-cosy-title">
         <img src="resources/img-tea-cozy-logo.png" />
       </div>
@@ -17,7 +18,9 @@
       </nav>
     </header>
     <div class="content">
+    <!-- Main flex container to hold all content -->
       <div class="our-mission">
+      <!-- Flex container for first section of of content entitled "Our Mission" -->
         <div class="mission-image">
           <div class="mission-header">
             <span class="mission-text"><h2>Our Mission</h2></span>
@@ -25,33 +28,38 @@
           </div>
         </div>
       </div>
+
       <div class="tea-of-month">
-        <span><h2>Tea of the Month</h2></span>
-        <span><h4>What's Steeping at the Tea Cozy?</h4></span>
+      <!-- Flex container for second section of of content entitled "Tea of the Month" -->
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at the Tea Cozy?</h4>
         <div class="tea-month-image-container">
+        <!-- Flex container for the 5 images to display with text underneath each -->
           <div class="tea-month-image">
             <img src="resources/img-berryblitz.jpg" />
-            <span><h4>Fall Berry Blitz Tea</h4></span>
+            <h4>Fall Berry Blitz Tea</h4>
           </div>
           <div class="tea-month-image">
             <img src="resources/img-spiced-rum.jpg" />
-            <span><h4>Spiced Rum Tea</h4></span>
+            <h4>Spiced Rum Tea</h4>
           </div>
           <div class="tea-month-image">
             <img src="resources/img-donut.jpg" />
-            <span><h4>Seasonal Donuts</h4></span>
+            <h4>Seasonal Donuts</h4>
           </div>
           <div class="tea-month-image">
             <img src="resources/img-donut.jpg" />
-            <span><h4>Myrtle Ave Tea</h4></span>
+            <h4>Myrtle Ave Tea</h4>
           </div>
           <div class="tea-month-image">
             <img src="resources/img-bedford-bizarre.jpg" />
-            <span><h4>Bedford Bizarre Tea</h4></span>
+            <h4>Bedford Bizarre Tea</h4>
           </div>
         </div>
       </div>
+
       <div class="locations">
+      <!-- Flex container for third section of of content entitled "Locations" -->
         <h2>Locations</h2>
         <div class="location-listings">
           <div class="location-box">
@@ -74,16 +82,17 @@
           </div>
         </div>
       </div>
-      <footer>
-        <div class="contact">
-          <h2>The Tea Cosy</h2>
-          <h5>contact@theteacozy.com</h5>
-          <h5>917-555-8904</h5>
-        </div>
-        <div class="copyright">
-          <span>copyright The tea Cozy 2017</span>
-        </div>
-      </footer>
-    </div>
+    </div> <!-- End of "content" container -->
+    <footer>
+    <!-- Flex container for footer -->
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div class="copyright">
+        <h5>copyright The tea Cozy 2017</h5>
+      </div>
+    </footer>
   </body>
 </html>
